--- a/app/src/main/res/layout/fragment_production_reports.xml
+++ b/app/src/main/res/layout/fragment_production_reports.xml
@@ -1,12 +1,8 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.ProductionReportsFragment">
-
-<FrameLayout
-
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.ProductionReportsFragment">
 
 
     <!-- TODO: Update blank fragment layout -->
@@ -16,4 +12,3 @@
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
-</layout>
