--- a/app/src/main/res/layout/fragment_crop_production_reports.xml
+++ b/app/src/main/res/layout/fragment_crop_production_reports.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.CropFarmReportsActivity"
-    android:background="@color/gray_mh">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/gray_mh"
+    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.CropProductionReports">
+    >
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
