--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -39,6 +39,7 @@
         <action
             android:id="@+id/action_cropRecordsFragment_to_farmRecordsHomeFragment"
             app:destination="@id/farmRecordsHomeFragment" />
+
     </fragment>
     <fragment
         android:id="@+id/livestockRecordsFragment"
@@ -125,9 +126,13 @@
     </fragment>
     <fragment
         android:id="@+id/productionReportsFragment"
-        android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.ProductionReportsFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.CropProductionReports"
         android:label="@string/label_production_reports"
-        tools:layout="@layout/fragment_production_reports" />
+        tools:layout="@layout/fragment_crop_production_reports" >
+        <action
+            android:id="@+id/action_productionReportsFragment_to_cropRecordsFragment"
+            app:destination="@id/cropRecordsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/addFieldFragment"
         android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.AddFieldFragment"
