--- a/app/src/main/res/layout/medication_list_item.xml
+++ b/app/src/main/res/layout/medication_list_item.xml
@@ -1,13 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/gray">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/layout1"
+   android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_margin="5dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toStartOf="@+id/medication_card_view"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <ImageView
+        android:id="@+id/img_checked"
+        android:layout_width="@dimen/dimen_30dp"
+        android:layout_height="@dimen/dimen_30dp"
+        android:src="@drawable/ic_checked"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/line"/>
+    <View
+        android:id="@+id/line"
+        android:layout_width="2dp"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/img_checked"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
+<androidx.cardview.widget.CardView
+    android:id="@+id/medication_card_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dimen_10dp"
     android:background="@color/gray"
-    app:cardElevation="@dimen/margin_10">
-
+    app:cardElevation="@dimen/margin_10"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toEndOf="parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,14 +65,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.35" />
+                app:layout_constraintGuide_begin="144dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline37"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.4" />
+                app:layout_constraintGuide_begin="165dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline39"
@@ -54,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.65" />
+                app:layout_constraintGuide_begin="280dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline60"
@@ -68,40 +107,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.37" />
+                app:layout_constraintGuide_percent="0.4" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline33"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.54" />
+                app:layout_constraintGuide_percent="0.59" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline34"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.7" />
+                app:layout_constraintGuide_percent="0.79" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline35"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.85" />
+
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/gray"
                 app:layout_constraintBottom_toTopOf="@+id/guideline60"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/mating_item_date"
+                android:id="@+id/medication_item_date"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:fontFamily="@font/josefin_sans_semibold"
@@ -109,15 +142,33 @@
                 android:paddingStart="@dimen/margin_10"
                 android:paddingEnd="@dimen/margin_10"
                 android:text="20/09/2020"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/dimen_20sp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/guideline60"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/medication_item_type"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/josefin_sans"
+                android:gravity="center|start"
+                android:maxLines="1"
+                android:paddingStart="@dimen/margin_10"
+                android:text="Vaccination"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/guideline60"
+                app:layout_constraintEnd_toStartOf="@+id/guideline30"
+                app:layout_constraintStart_toStartOf="@+id/guideline37"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
-                android:id="@+id/mating_item_more"
+                android:id="@+id/medication_item_more"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:backgroundTint="@color/black"
@@ -129,6 +180,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline40"
                 app:layout_constraintTop_toTopOf="parent" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                app:layout_constraintBottom_toTopOf="@+id/guideline60"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline60" />
 
             <TextView
                 android:layout_width="0dp"
@@ -137,8 +196,9 @@
                 android:gravity="center|start"
                 android:paddingStart="@dimen/margin_10"
                 android:paddingEnd="@dimen/margin_10"
-                android:text="Female"
+                android:text="Condition"
                 android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/dimen_16sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline33"
                 app:layout_constraintEnd_toStartOf="@+id/guideline29"
                 app:layout_constraintStart_toStartOf="parent"
@@ -153,8 +213,9 @@
                 android:maxLines="1"
                 android:paddingStart="@dimen/margin_10"
                 android:paddingEnd="@dimen/margin_10"
-                android:text="Male"
+                android:text="Animal"
                 android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/dimen_16sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline32"
                 app:layout_constraintEnd_toStartOf="@+id/guideline29"
                 app:layout_constraintStart_toStartOf="parent"
@@ -188,7 +249,7 @@
                 app:layout_constraintTop_toTopOf="@+id/guideline60" />
 
             <TextView
-                android:id="@+id/mating_item_female"
+                android:id="@+id/medication_item_condition"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:ellipsize="end"
@@ -196,16 +257,16 @@
                 android:gravity="center|start"
                 android:maxLines="1"
                 android:paddingStart="@dimen/margin_10"
-                android:paddingEnd="@dimen/margin_10"
-                android:text="A001"
+                android:text="Foot &amp; Mouth"
                 android:textColor="@android:color/black"
+                android:textSize="@dimen/dimen_16sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline33"
                 app:layout_constraintEnd_toStartOf="@+id/guideline30"
                 app:layout_constraintStart_toStartOf="@+id/guideline37"
                 app:layout_constraintTop_toTopOf="@+id/guideline32" />
 
             <TextView
-                android:id="@+id/mating_item_male"
+                android:id="@+id/medication_item_animal"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:ellipsize="end"
@@ -216,6 +277,7 @@
                 android:paddingEnd="@dimen/margin_10"
                 android:text="A001"
                 android:textColor="@android:color/black"
+                android:textSize="@dimen/dimen_16sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline32"
                 app:layout_constraintEnd_toStartOf="@+id/guideline30"
                 app:layout_constraintStart_toStartOf="@+id/guideline37"
@@ -228,8 +290,9 @@
                 android:gravity="center|start"
                 android:paddingStart="@dimen/margin_10"
                 android:paddingEnd="@dimen/margin_10"
-                android:text="Method"
+                android:text="Medicine"
                 android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/dimen_16sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline34"
                 app:layout_constraintEnd_toStartOf="@+id/guideline29"
                 app:layout_constraintStart_toStartOf="parent"
@@ -249,7 +312,7 @@
                 app:layout_constraintTop_toTopOf="@+id/guideline33" />
 
             <TextView
-                android:id="@+id/mating_item_method"
+                android:id="@+id/medication_item_medicine"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:ellipsize="end"
@@ -258,8 +321,9 @@
                 android:maxLines="1"
                 android:paddingStart="@dimen/margin_10"
                 android:paddingEnd="@dimen/margin_10"
-                android:text="Natural Mating"
+                android:text="Penicillin"
                 android:textColor="@android:color/black"
+                android:textSize="@dimen/dimen_16sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline34"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline37"
@@ -272,9 +336,10 @@
                 android:gravity="center|start"
                 android:paddingStart="@dimen/margin_10"
                 android:paddingEnd="@dimen/margin_10"
-                android:text="Status"
+                android:text="Dosage"
                 android:textColor="@color/colorPrimary"
-                app:layout_constraintBottom_toTopOf="@+id/guideline35"
+                android:textSize="@dimen/dimen_16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline29"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline34" />
@@ -287,13 +352,13 @@
                 android:text=":"
                 android:textColor="@color/black"
                 app:autoSizeTextType="uniform"
-                app:layout_constraintBottom_toTopOf="@+id/guideline35"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline37"
                 app:layout_constraintStart_toStartOf="@+id/guideline29"
                 app:layout_constraintTop_toTopOf="@+id/guideline34" />
 
             <TextView
-                android:id="@+id/mating_item_status"
+                android:id="@+id/medication_item_dosage"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:ellipsize="end"
@@ -302,61 +367,19 @@
                 android:maxLines="1"
                 android:paddingStart="@dimen/margin_10"
                 android:paddingEnd="@dimen/margin_10"
-                android:text="Pregnant"
+                android:text="2.5 Ml/day"
                 android:textColor="@android:color/black"
-                app:layout_constraintBottom_toTopOf="@+id/guideline35"
+                android:textSize="@dimen/dimen_16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline39"
                 app:layout_constraintStart_toStartOf="@+id/guideline37"
                 app:layout_constraintTop_toTopOf="@+id/guideline34" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:ellipsize="end"
-                android:fontFamily="@font/josefin_sans"
-                android:gravity="center|start"
-                android:maxLines="1"
-                android:paddingStart="@dimen/margin_10"
-                android:paddingEnd="@dimen/margin_10"
-                android:text="Expected Delivery"
-                android:textColor="@color/colorPrimary"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/guideline29"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline35" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:fontFamily="@font/josefin_sans"
-                android:gravity="center"
-                android:text=":"
-                android:textColor="@color/black"
-                app:autoSizeTextType="uniform"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/guideline37"
-                app:layout_constraintStart_toStartOf="@+id/guideline29"
-                app:layout_constraintTop_toTopOf="@+id/guideline35" />
-
-            <TextView
-                android:id="@+id/mating_item_expected_delivery_date"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:ellipsize="end"
-                android:fontFamily="@font/josefin_sans"
-                android:gravity="center|start"
-                android:maxLines="1"
-                android:paddingStart="@dimen/margin_10"
-                android:paddingEnd="@dimen/margin_10"
-                android:text="24/02/2021"
-                android:textColor="@android:color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/guideline39"
-                app:layout_constraintStart_toStartOf="@+id/guideline37"
-                app:layout_constraintTop_toTopOf="@+id/guideline35" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
+
+
+</LinearLayout>
