--- a/app/src/main/res/layout/crop_field_list_card.xml
+++ b/app/src/main/res/layout/crop_field_list_card.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
             <LinearLayout
@@ -41,6 +42,7 @@
                             android:textColor="@color/colorPrimary"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:textStyle="bold"
                             android:layout_marginRight="4dp"
                             android:text="Field 1 " />
@@ -70,9 +72,10 @@
                                 <TextView
                                     android:id="@+id/txt_crop_field_card_area"
                                     android:layout_width="0dp"
-                                    android:layout_weight="0.6"
+                                    android:layout_weight="0.7"
                                     android:layout_height="match_parent"
-                                    android:text=" 15.5 ha"
+                                    android:text="15.5 hactares"
+                                    android:gravity="center_vertical"
                                     android:layout_marginStart="-5dp"
                                     android:textColor="@color/blackText"
                                     android:textStyle="bold"
@@ -81,7 +84,7 @@
                                 <LinearLayout
                                     android:orientation="horizontal"
                                     android:layout_width="0dp"
-                                    android:layout_weight="0.3"
+                                    android:layout_weight="0.2"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="right"
                                     android:layout_marginLeft="6dp"
@@ -93,7 +96,7 @@
                                         android:id="@+id/img_crop_fields_card_more"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:src="@drawable/ic_baseline_chevron_right_24" />
+                                        android:src="@drawable/ic_baseline_more_vert" />
 
 
                                 </LinearLayout>
@@ -150,20 +153,28 @@
 
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.1"
-                                    android:text="Field Type:"
+                                    android:layout_weight="0.44"
+                                    android:text="Field Type"
                                     android:textColor="@color/colorPrimary"
-                                    android:textSize="16dp" />
+                                    android:textSize="16sp" />
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="0.14"
+                                    android:text=":"
+                                    android:textStyle="bold"
+                                    />
+
 
                                 <TextView
                                     android:id="@+id/txt_crop_field_card_soil_type"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="0.9"
+                                    android:layout_weight="0.5"
                                     android:text="Loamy Sand"
                                     android:textColor="@color/blackText"
                                     android:textStyle="bold"
-                                    android:textSize="16dp" />
+                                    android:textSize="16sp"/>
 
                             </LinearLayout>
 
@@ -186,16 +197,22 @@
                                 <TextView
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.1"
-                                    android:text="Status:"
+                                    android:layout_weight="0.44"
+                                    android:text="Status"
                                     android:textColor="@color/colorPrimary"
                                     android:textSize="16dp" />
-
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="0.14"
+                                    android:text=":"
+                                    android:textStyle="bold"
+                                    />
                                 <TextView
                                     android:id="@+id/txt_crop_field_card_soil_category"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="0.9"
+                                    android:layout_weight="0.5"
                                     android:text="Light Sand "
                                     android:textColor="@color/blackText"
                                     android:textStyle="bold"
@@ -220,16 +237,23 @@
                             <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="Croppable Area:"
+                                android:text="Croppable Area"
                                 android:textColor="@color/colorPrimary"
-                                android:layout_weight="1.1"
-                                android:textSize="16dp" />
+                                android:layout_weight="0.44"
+                                android:textSize="16sp" />
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.14"
+                                android:text=":"
+                                android:textStyle="bold"
+                                />
 
                             <TextView
                                 android:id="@+id/txt_crop_field_card_croppable_area"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.9"
+                                android:layout_weight="0.5"
                                 android:text="12.45 ha"
                                 android:textColor="@color/blackText"
                                 android:textStyle="bold"
@@ -246,6 +270,41 @@
 
             </LinearLayout>
         </LinearLayout>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal"
+        android:gravity="end"
+        android:padding="0dp"
+        android:id="@+id/layout_crop_harvest_card_show_hide"
+        android:background="#B6C5B6"
+        >
+
+        <ImageView
+            android:id="@+id/img_crop_field_card_show_crops"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:backgroundTint="@color/black"
+            android:textColor="#D2DDD5"
+            android:layout_marginEnd="18.17dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/arrow_drop_down" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/layout_crop_field_expand"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:background="#B6C5B6"
+        android:padding="4dp"
+        android:visibility="gone"
+        >
 
 
     </LinearLayout>
