--- a/app/src/main/res/layout/fragment_add_field.xml
+++ b/app/src/main/res/layout/fragment_add_field.xml
@@ -38,41 +38,46 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:padding="@dimen/dimen_20dp">
+                android:padding="5dp">
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginBottom="10dp"
                     android:padding="@dimen/dimen_10dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/field_name"
+                        android:layout_marginBottom="4dp"
+                        android:textSize="@dimen/dimen_16sp"/>
 
                     <com.myfarmnow.myfarmcrop.utils.layout.OtpEdittext
                         android:id="@+id/txt_crop_field_name"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:layout_marginTop="@dimen/input_field_margin"
                         android:background="@drawable/edittext_corner"
                         android:gravity="start|center_vertical"
-                        android:hint="Field Name"
                         android:inputType="text"
                         android:paddingLeft="@dimen/dimen_15sp"
                         android:tag=" "
                         android:textAlignment="viewStart"
-                        android:textColor="@color/textColor"
-                        android:textColorHint="@color/textColorPrimaryDark" />
+                        android:textColor="@color/textColor" />
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginBottom="10dp"
                     android:padding="@dimen/dimen_10dp">
-
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/field_type"
+                        android:layout_marginBottom="4dp"
+                        android:textSize="@dimen/dimen_16sp"/>
                     <RelativeLayout
                         android:id="@+id/spinnerLayout"
                         android:layout_width="match_parent"
@@ -114,7 +119,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginBottom="5dp"
                     android:padding="@dimen/dimen_10dp">
 
                     <LinearLayout
@@ -124,7 +128,12 @@
                         android:layout_weight="1"
                         android:layout_marginRight="12dp">
 
-
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/status"
+                            android:layout_marginBottom="4dp"
+                            android:textSize="@dimen/dimen_16sp"/>
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -142,8 +151,6 @@
                                 android:layout_gravity="center"
                                 android:background="@android:color/transparent"
                                 android:gravity="center"
-                                android:layout_marginLeft="5dp"
-                                android:hint="Enter.."
                                 android:entries="@array/crop_field_status"
                                 android:spinnerMode="dropdown"/>
 
@@ -168,7 +175,12 @@
                         android:orientation="vertical"
                         android:layout_weight="1"
                         android:layout_marginStart="12dp">
-
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/select_unit"
+                            android:layout_marginBottom="4dp"
+                            android:textSize="@dimen/dimen_16sp"/>
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -187,8 +199,6 @@
                                 android:layout_gravity="center"
                                 android:background="@android:color/transparent"
                                 android:gravity="center"
-                                android:layout_marginLeft="5dp"
-                                android:hint="Enter.."
                                 android:entries="@array/crop_field_units"
                                 android:spinnerMode="dropdown"/>
 
@@ -208,11 +218,20 @@
 
                     </LinearLayout>
                 </LinearLayout>
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/dimen_10dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/field_size"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="@dimen/dimen_16sp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
-                    android:layout_margin="@dimen/dimen_10dp"
                     android:layout_alignParentTop="true"
                     android:background="@drawable/edittext_corner"
                     android:orientation="horizontal">
@@ -224,9 +243,7 @@
                         android:layout_weight="0.7"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:background="@android:color/transparent"
-                        android:inputType="numberDecimal"
-                        android:textSize="14sp"
-                        android:hint="Field size" />
+                        android:inputType="numberDecimal" />
 
                     <TextView
                         android:id="@+id/txt_crops_estimated_revenue_units"
@@ -240,11 +257,22 @@
                         android:layout_weight="0.2" />
 
                 </LinearLayout>
-
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="@dimen/dimen_10dp"
+                android:padding="@dimen/dimen_10dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/croppable_area"
+                    android:layout_marginBottom="4dp"
+                    android:textSize="@dimen/dimen_16sp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
-                    android:layout_margin="@dimen/dimen_10dp"
                     android:layout_alignParentTop="true"
                     android:background="@drawable/edittext_corner"
                     android:orientation="horizontal">
@@ -256,9 +284,7 @@
                         android:layout_weight="0.7"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:background="@android:color/transparent"
-                        android:inputType="numberDecimal"
-                        android:textSize="14sp"
-                        android:hint="Croppable Area" />
+                        android:inputType="numberDecimal"/>
 
                     <TextView
                         android:id="@+id/txt_crops_croppable_area_units"
@@ -272,34 +298,38 @@
                         android:layout_weight="0.2" />
 
                 </LinearLayout>
+            </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/dimen_10dp">
-                </LinearLayout>
 
-                <LinearLayout
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dimen_10dp"
                     android:background="@drawable/rounded_corners_button">
 
                     <Button
                         android:id="@+id/btn_save"
                         android:layout_width="match_parent"
-                        android:layout_height="55dp"
-                        android:text="Save "
-                        android:textAllCaps="false"
-                        android:textColor="#ffffff"
-                        android:textSize="20sp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:background="@color/transparent"
+                        android:text="save"
                         android:textStyle="bold"
-                        style="@style/Button"
-                        android:background="@android:color/transparent"
-                        />
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/button_text_size" />
 
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="30dip"
+                        android:layout_height="30dip"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_margin="10dip"
+                        android:src="@drawable/ic_right_arrow">
+                    </ImageView>
+                </FrameLayout>
 
             </LinearLayout>
         </ScrollView>
