Fixed Store Navigation issue

--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -73,6 +73,10 @@
         <action
             android:id="@+id/action_storeFragment_to_storeAddFertilizerFragment"
             app:destination="@id/storeAddFertilizerFragment" />
+        <action
+            android:id="@+id/action_storeFragment_to_farmRecordsHomeFragment"
+            app:destination="@id/farmRecordsHomeFragment" />
+
     </fragment>
     <fragment
         android:id="@+id/financialRecordsFragment"
