--- a/app/src/main/res/layout/fragment_add_medication.xml
+++ b/app/src/main/res/layout/fragment_add_medication.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     android:layout_margin="@dimen/dimen_10dp"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.liveStockRecords.AddMedicationFragment">
+    tools:context="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.livestockrecords.AddMedicationFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/seed_close"
+            android:id="@+id/add_medication_close"
             android:layout_width="@dimen/dimen_30dp"
             android:layout_height="@dimen/dimen_30dp"
             android:layout_gravity="end"
@@ -74,7 +74,7 @@
                             android:orientation="horizontal">
 
                             <EditText
-                                android:id="@+id/txt_medication_date"
+                                android:id="@+id/add_medication_date"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
                                 android:layout_centerVertical="true"
@@ -121,14 +121,14 @@
                             android:orientation="horizontal">
 
                             <Spinner
-                                android:id="@+id/sp_crop_seed_type"
+                                android:id="@+id/add_medication_type_sp"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
                                 android:layout_centerVertical="true"
                                 android:layout_gravity="center"
                                 android:background="@android:color/transparent"
                                 android:gravity="center"
-                                android:entries="@array/seed_inventory_seed_type"
+                                android:entries="@array/sp_medication_type"
                                 android:spinnerMode="dropdown"/>
 
                             <ImageView
@@ -180,14 +180,13 @@
                             android:orientation="horizontal">
 
                             <Spinner
-                                android:id="@+id/sp_medication_animal"
+                                android:id="@+id/add_medication_animal_sp"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
                                 android:layout_centerVertical="true"
                                 android:layout_gravity="center"
                                 android:background="@android:color/transparent"
                                 android:gravity="center"
-                                android:entries="@array/crop_seeds_usage_units"
                                 android:spinnerMode="dropdown"/>
 
                             <ImageView
@@ -228,14 +227,14 @@
                             android:orientation="horizontal">
 
                             <Spinner
-                                android:id="@+id/sp_medication_health_condition"
+                                android:id="@+id/add_medical_health_condition_sp"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
                                 android:layout_centerVertical="true"
                                 android:layout_gravity="center"
                                 android:background="@android:color/transparent"
                                 android:gravity="center"
-                                android:entries="@array/crop_seeds_usage_units"
+                                android:entries="@array/sp_medication_health_condition"
                                 android:spinnerMode="dropdown"/>
 
                             <ImageView
@@ -275,7 +274,7 @@
                             android:text="@string/medication_name" />
 
                         <EditText
-                            android:id="@+id/txt_medication_name"
+                            android:id="@+id/add_medication_name"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:background="@drawable/edittext_corner"
@@ -299,7 +298,7 @@
                             android:text="@string/manufacturer" />
 
                         <EditText
-                            android:id="@+id/txt_medication_manufacturer"
+                            android:id="@+id/add_medication_manufacturer"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:paddingStart="@dimen/dimen_10dp"
@@ -340,7 +339,7 @@
                             android:orientation="horizontal">
 
                             <EditText
-                                android:id="@+id/txt_medication_dosage"
+                                android:id="@+id/add_medication_dosage"
                                 android:layout_width="0dp"
                                 android:layout_height="50dp"
                                 android:layout_margin="0dp"
@@ -390,7 +389,7 @@
                             android:orientation="horizontal">
 
                             <EditText
-                                android:id="@+id/txt_medication_treatment_period"
+                                android:id="@+id/add_medication_treatment_period"
                                 android:layout_width="0dp"
                                 android:layout_height="50dp"
                                 android:layout_margin="0dp"
@@ -432,7 +431,7 @@
                         android:layout_marginBottom="4dp" />
 
                     <EditText
-                        android:id="@+id/txt_medication_notes"
+                        android:id="@+id/add_medication_notes"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
                         android:paddingStart="@dimen/dimen_10dp"
@@ -455,7 +454,7 @@
                         android:layout_marginBottom="4dp" />
 
                     <EditText
-                        android:id="@+id/txt_medication_technical_personnel"
+                        android:id="@+id/add_medication_technical_personnel"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:paddingStart="@dimen/dimen_10dp"
