--- a/app/src/main/res/layout/medication_list_item.xml
+++ b/app/src/main/res/layout/medication_list_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/gray">
+    >
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/layout1"
@@ -38,12 +38,11 @@
 </androidx.constraintlayout.widget.ConstraintLayout>
 <androidx.cardview.widget.CardView
     android:id="@+id/medication_card_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dimen_10dp"
     android:background="@color/gray"
-    app:cardElevation="@dimen/margin_10"
+    app:cardElevation="@dimen/dimen_5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintEnd_toEndOf="parent">
